--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.20.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
